--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "moment": "^2.18.1",
         "mongodb": "^2.2.9",
         "mongoose": "^4.5.10",
+        "morgan": "^1.9.1",
         "npm": "^6.1.0",
         "passport": "^0.3.2",
         "passport-http": "^0.3.0",
