--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "body-parser": "^1.15.2",
         "cors": "^2.8.4",
         "express": "^4.14.0",
+        "jsonwebtoken": "^8.4.0",
         "moment": "^2.18.1",
         "mongodb": "^2.2.36",
         "mongoose": "^4.5.10",
@@ -15,6 +16,8 @@
         "npm": "^6.1.0",
         "passport": "^0.3.2",
         "passport-http": "^0.3.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "request": "^2.88.0",
         "unirest": "^0.5.1"
     },
